# God-Simulation

./: .clang-format  .gitignore  CMakeLists.txt  README.md  biomes.ppm  elevation.ppm  moisture.ppm  setup.sh  temperature.ppm  terrain.ppm
docs/: architecture.md
maps/: biomes.ppm  elevation.ppm  moisture.ppm  temperature.ppm  terrain.ppm
src/: main.cpp
src/core/ecs/: EntityID.h  Registry.h
src/core/events/: EventBus.h
src/core/noise/: Noise.h
src/core/rng/: RNG.h
src/core/serialise/: BinaryStream.h
src/core/time/: SimTime.h  TickScheduler.h
src/core/util/: Assert.h  Log.h  Types.h  Version.cpp
src/layers/: Layer.h
src/layers/biological/: BiologicalLayer.h
src/layers/civilisation/: CivilisationLayer.h
src/layers/cosmological/: CosmologicalLayer.h
src/layers/divine/: DivineLayer.h
src/layers/planetary/: Biome.h  ClimateGenerator.h  Heightmap.h  ImageExporter.h  PlanetData.h  PlanetaryLayer.h  TerrainGenerator.h
src/renderer/: Camera.h  GL33Loader.h  InputState.h  PlanetRenderer.h  Shader.h  SphereMesh.h  Window.h
src/simulation/: Simulation.h
tests/core/: test_ecs.cpp  test_event_bus.cpp  test_rng.cpp  test_serialise.cpp  test_tick_scheduler.cpp
tests/integration/: test_simulation_integration.cpp
tests/planetary/: test_planetary.cpp
